--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>com.yegor256</groupId>
+      <artifactId>asto</artifactId>
+      <version>0.2.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
