--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.1.4</version>
+    </dependency>
+    <dependency>
       <groupId>com.yegor256</groupId>
       <artifactId>asto</artifactId>
       <version>0.2.0</version>
