--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
       <version>1.1.4</version>
     </dependency>
     <dependency>
-      <groupId>com.yegor256</groupId>
+      <groupId>com.artipie</groupId>
       <artifactId>asto</artifactId>
-      <version>0.2.0</version>
+      <version>0.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
