--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.artipie</groupId>
   <artifactId>docker-adapter</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1</version>
   <name>docker-adapter</name>
   <url>https://github.com/artipie/docker-adapter</url>
   <properties>
