--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,15 @@ SOFTWARE.
     <dependency>
       <groupId>com.artipie</groupId>
       <artifactId>asto</artifactId>
-      <version>0.9.1</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>org.cactoos</groupId>
       <artifactId>cactoos</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.akarnokd</groupId>
+      <artifactId>rxjava2-jdk8-interop</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
