new github config

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,5 +19,5 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Build with Maven
+      - name: Build it with Maven
         run: mvn -B verify -Pqulice
